[package]
edition = "2021"
name    = "esp-test"
version = "0.1.0"

[[bin]]
name = "esp-test"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-beta.1", features = ["esp32s3"] }
esp-println = { version = "0.14.0", features = ["esp32s3"] }
critical-section = "1.2.0"
esp-bootloader-esp-idf = "0.1.0"

[dev-dependencies]
embedded-test = "0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
